Fixed CSS declarations - this are needed for proper alignment of values on secondary y axis

--- a/pygal/css/graph.css
+++ b/pygal/css/graph.css
@@ -49,8 +49,12 @@ text.no_data {
 .axis.y text {
   text-anchor: end;
 }
+.axis.y2 text {
+  text-anchor: start;
+}
 
-.axis.y .logarithmic text:not(.major) {
+.axis.y .logarithmic text:not(.major) ,
+.axis.y2 .logarithmic text:not(.major) {
   font-size: 50%;
 }
 
@@ -66,11 +70,13 @@ text.no_data {
 }
 
 .horizontal .axis.y .guide.line,
+.horizontal .axis.y2 .guide.line,
 .vertical .axis.x .guide.line {
   opacity: 0;
 }
 
 .axis.y .guides:hover .guide.line,
+.axis.y2 .guides:hover .guide.line,
 .line-graph .axis.x .guides:hover .guide.line,
 .gauge-graph .axis.x .guides:hover .guide.line,
 .stackedline-graph .axis.x .guides:hover .guide.line,
